...
            const val PasswordConfirmationTextField: String = "PasswordConfirmationTextField"
            const val SelectMoveDestinationItemGrid: String = "SelectMoveDestinationItemGrid"
            const val AppPresentationVerticalPager: String = "AppPresentationVerticalPager"
            const val AppPresentationNextButton: String = "AppPresentationNextButton"
            const val AppPresentationSkipButton: String = "AppPresentationSkipButton"
            const val Slider: String = "Slider"
            const val ItemFormField: String = "ItemFormField"
            const val LinearProgressItem: String = "LinearProgressItem"
            const val GeneratedPasswordText: String = "GeneratedPasswordText"
            const val DatePickerAction: String = "DatePickerAction"
            const val TimePickerAction: String = "TimePickerAction"
            const val GeneratePasswordAction: String = "GeneratePasswordAction"
            const val VisibilityAction: String = "VisibilityAction"
            const val RecentSearchItem: String = "RecentSearchItem"
            const val PasswordStrengthText: String = "PasswordStrengthText"
            const val MoveHereButton: String = "MoveHereButton"
            const val IdentifierLabelText: String = "IdentifierLabelText"
            const val AboutScreenList: String = "AboutScreenList"
            const val OneSafeKStartOnBoardingCard: String = "OneSafeKStartOnBoardingCard"
            const val OneSafeKConfigurationCard: String = "OneSafeKConfigurationCard"
            const val BubblesNoContactCard: String = "BubblesNoContactCard"
            const val WriteMessageTopBar: String = "OneSafeKWriteMessageRecipientCard"
            const val SupportUsCard: String = "SupportUsCard"
...
        object BottomSheet {
            const val CreateItemBottomSheet: String = "CreateItemBottomSheet"
            const val ItemImagePickerBottomSheet: String = "ItemImagePickerBottomSheet"
            const val ColorPickerBottomSheet: String = "ColorPickerBottomSheet"
            const val PasswordGeneratorBottomSheet: String = "PasswordGeneratorBottomSheet"
            const val EnterPasswordBottomSheet: String = "EnterPasswordBottomSheet"
            const val IdentifierInfoBottomSheet: String = "IdentifierInfoBottomSheet"
            const val VerifyPasswordBottomSheet: String = "VerifyPasswordBottomSheet"
            const val HelpUsTranslateBottomSheet: String = "HelpUsTranslateBottomSheet"
            const val VerifyPasswordBottomSheetInterval: String = "VerifyPasswordBottomSheetInterval"
            const val AskForSupportBottomSheet: String = "AskForSupportBottomSheet"
            const val ItemDisplayOptionsBottomSheet: String = "ItemDisplayOptionsBottomSheet"
            const val ItemFormNewFieldBottomSheet: String = "ItemFormNewFieldBottomSheet"
...
            const val SettingsSafeLazyColumn: String = "SettingsSafeLazyColumn"
            const val SettingsGlobalLazyColumn: String = "SettingsGlobalLazyColumn"
            const val SettingsHorizontalPager: String = "SettingsHorizontalPager"
        }

        object Menu {
            const val FieldActionMenu: String = "FieldActionMenu"
        }
    }

    object Text {
        const val MaxLineSize: Int = 3
        const val MaxLineSizeNoteField: Int = 10
...
